content/_generated-doc/2.7/config/quarkus-hibernate-envers.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference.searchable, cols="80,.^10,.^10"]
|===

h|[[quarkus-hibernate-envers_configuration]]link:#quarkus-hibernate-envers_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-envers_quarkus.hibernate-envers.store-data-at-delete]]`link:#quarkus-hibernate-envers_quarkus.hibernate-envers.store-data-at-delete[quarkus.hibernate-envers.store-data-at-delete]`

[.description]
--
Enable store_data_at_delete feature. Maps to `org.hibernate.envers.configuration.EnversSettings++#++STORE_DATA_AT_DELETE`.
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-envers_quarkus.hibernate-envers.audit-table-suffix]]`link:#quarkus-hibernate-envers_quarkus.hibernate-envers.audit-table-suffix[quarkus.hibernate-envers.audit-table-suffix]`

[.description]
--
Defines a suffix for historical data table. Defaults to `_AUD`. Maps to `org.hibernate.envers.configuration.EnversSettings++#++AUDIT_TABLE_SUFFIX`.
--|string 
|`_AUD`


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-envers_quarkus.hibernate-envers.audit-table-prefix]]`link:#quarkus-hibernate-envers_quarkus.hibernate-envers.audit-table-prefix[quarkus.hibernate-envers.audit-table-prefix]`

[.description]
--
Defines a prefix for historical data table. Default is the empty string. Maps to `org.hibernate.envers.configuration.EnversSettings++#++AUDIT_TABLE_PREFIX`.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-envers_quarkus.hibernate-envers.revision-field-name]]`link:#quarkus-hibernate-envers_quarkus.hibernate-envers.revision-field-name[quarkus.hibernate-envers.revision-field-name]`

[.description]
--
Revision field name. Defaults to `REV`. Maps to `org.hibernate.envers.configuration.EnversSettings++#++REVISION_FIELD_NAME`.
--|string 
|`REV`


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-envers_quarkus.hibernate-envers.revision-type-field-name]]`link:#quarkus-hibernate-envers_quarkus.hibernate-envers.revision-type-field-name[quarkus.hibernate-envers.revision-type-field-name]`

[.description]
--
Revision type field name. Defaults to `REVTYPE`. Maps to `org.hibernate.envers.configuration.EnversSettings++#++REVISION_TYPE_FIELD_NAME`.
--|string 
|`REVTYPE`


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-envers_quarkus.hibernate-envers.revision-on-collection-change]]`link:#quarkus-hibernate-envers_quarkus.hibernate-envers.revision-on-collection-change[quarkus.hibernate-envers.revision-on-collection-change]`

[.description]
--
Enable the revision_on_collection_change feature. Maps to `org.hibernate.envers.configuration.EnversSettings++#++REVISION_ON_COLLECTION_CHANGE`.
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-envers_quarkus.hibernate-envers.do-not-audit-optimistic-locking-field]]`link:#quarkus-hibernate-envers_quarkus.hibernate-envers.do-not-audit-optimistic-locking-field[quarkus.hibernate-envers.do-not-audit-optimistic-locking-field]`

[.description]
--
Enable the do_not_audit_optimistic_locking_field feature. Maps to `org.hibernate.envers.configuration.EnversSettings++#++DO_NOT_AUDIT_OPTIMISTIC_LOCKING_FIELD`.
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-envers_quarkus.hibernate-envers.default-schema]]`link:#quarkus-hibernate-envers_quarkus.hibernate-envers.default-schema[quarkus.hibernate-envers.default-schema]`

[.description]
--
Defines the default schema of where audit tables are to be created. Maps to `org.hibernate.envers.configuration.EnversSettings++#++DEFAULT_SCHEMA`.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-envers_quarkus.hibernate-envers.default-catalog]]`link:#quarkus-hibernate-envers_quarkus.hibernate-envers.default-catalog[quarkus.hibernate-envers.default-catalog]`

[.description]
--
Defines the default catalog of where audit tables are to be created. Maps to `org.hibernate.envers.configuration.EnversSettings++#++DEFAULT_CATALOG`.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-envers_quarkus.hibernate-envers.track-entities-changed-in-revision]]`link:#quarkus-hibernate-envers_quarkus.hibernate-envers.track-entities-changed-in-revision[quarkus.hibernate-envers.track-entities-changed-in-revision]`

[.description]
--
Enables the track_entities_changed_in_revision feature. Maps to `org.hibernate.envers.configuration.EnversSettings++#++TRACK_ENTITIES_CHANGED_IN_REVISION`.
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-envers_quarkus.hibernate-envers.use-revision-entity-with-native-id]]`link:#quarkus-hibernate-envers_quarkus.hibernate-envers.use-revision-entity-with-native-id[quarkus.hibernate-envers.use-revision-entity-with-native-id]`

[.description]
--
Enables the use_revision_entity_with_native_id feature. Maps to `org.hibernate.envers.configuration.EnversSettings++#++USE_REVISION_ENTITY_WITH_NATIVE_ID`.
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-envers_quarkus.hibernate-envers.global-with-modified-flag]]`link:#quarkus-hibernate-envers_quarkus.hibernate-envers.global-with-modified-flag[quarkus.hibernate-envers.global-with-modified-flag]`

[.description]
--
Enables the global_with_modified_flag feature. Maps to `org.hibernate.envers.configuration.EnversSettings++#++GLOBAL_WITH_MODIFIED_FLAG`.
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-envers_quarkus.hibernate-envers.modified-flag-suffix]]`link:#quarkus-hibernate-envers_quarkus.hibernate-envers.modified-flag-suffix[quarkus.hibernate-envers.modified-flag-suffix]`

[.description]
--
Defines the suffix to be used for modified flag columns. Defaults to `_MOD`. Maps to `org.hibernate.envers.configuration.EnversSettings++#++MODIFIED_FLAG_SUFFIX`
--|string 
|`_MOD`


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-envers_quarkus.hibernate-envers.revision-listener]]`link:#quarkus-hibernate-envers_quarkus.hibernate-envers.revision-listener[quarkus.hibernate-envers.revision-listener]`

[.description]
--
Defines the fully qualified class name of a user defined revision listener. Maps to `org.hibernate.envers.configuration.EnversSettings++#++REVISION_LISTENER`.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-envers_quarkus.hibernate-envers.audit-strategy]]`link:#quarkus-hibernate-envers_quarkus.hibernate-envers.audit-strategy[quarkus.hibernate-envers.audit-strategy]`

[.description]
--
Defines the fully qualified class name of the audit strategy to be used. Maps to `org.hibernate.envers.configuration.EnversSettings++#++AUDIT_STRATEGY`.
--|string 
|`org.hibernate.envers.strategy.DefaultAuditStrategy`


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-envers_quarkus.hibernate-envers.original-id-prop-name]]`link:#quarkus-hibernate-envers_quarkus.hibernate-envers.original-id-prop-name[quarkus.hibernate-envers.original-id-prop-name]`

[.description]
--
Defines the property name for the audit entity's composite primary key. Defaults to `originalId`. Maps to `org.hibernate.envers.configuration.EnversSettings++#++ORIGINAL_ID_PROP_NAME`.
--|string 
|`originalId`


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-envers_quarkus.hibernate-envers.audit-strategy-validity-end-rev-field-name]]`link:#quarkus-hibernate-envers_quarkus.hibernate-envers.audit-strategy-validity-end-rev-field-name[quarkus.hibernate-envers.audit-strategy-validity-end-rev-field-name]`

[.description]
--
Defines the column name that holds the end revision number in audit entities. Defaults to `REVEND`. Maps to `org.hibernate.envers.configuration.EnversSettings++#++AUDIT_STRATEGY_VALIDITY_END_REV_FIELD_NAME`.
--|string 
|`REVEND`


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-envers_quarkus.hibernate-envers.audit-strategy-validity-store-revend-timestamp]]`link:#quarkus-hibernate-envers_quarkus.hibernate-envers.audit-strategy-validity-store-revend-timestamp[quarkus.hibernate-envers.audit-strategy-validity-store-revend-timestamp]`

[.description]
--
Enables the audit_strategy_validity_store_revend_timestamp feature. Maps to `org.hibernate.envers.configuration.EnversSettings++#++AUDIT_STRATEGY_VALIDITY_STORE_REVEND_TIMESTAMP`.
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-envers_quarkus.hibernate-envers.audit-strategy-validity-revend-timestamp-field-name]]`link:#quarkus-hibernate-envers_quarkus.hibernate-envers.audit-strategy-validity-revend-timestamp-field-name[quarkus.hibernate-envers.audit-strategy-validity-revend-timestamp-field-name]`

[.description]
--
Defines the column name of the revision end timestamp in the audit tables. Defaults to `REVEND_TSTMP`. Maps to `org.hibernate.envers.configuration.EnversSettings++#++AUDIT_STRATEGY_VALIDITY_REVEND_TIMESTAMP_FIELD_NAME`.
--|string 
|`REVEND_TSTMP`


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-envers_quarkus.hibernate-envers.embeddable-set-ordinal-field-name]]`link:#quarkus-hibernate-envers_quarkus.hibernate-envers.embeddable-set-ordinal-field-name[quarkus.hibernate-envers.embeddable-set-ordinal-field-name]`

[.description]
--
Defines the name of the column used for storing collection ordinal values for embeddable elements. Defaults to `SETORDINAL`. Maps to `org.hibernate.envers.configuration.EnversSettings++#++EMBEDDABLE_SET_ORDINAL_FIELD_NAME`.
--|string 
|`SETORDINAL`


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-envers_quarkus.hibernate-envers.allow-identifier-reuse]]`link:#quarkus-hibernate-envers_quarkus.hibernate-envers.allow-identifier-reuse[quarkus.hibernate-envers.allow-identifier-reuse]`

[.description]
--
Enables the allow_identifier_reuse feature. Maps to `org.hibernate.envers.configuration.EnversSettings++#++ALLOW_IDENTIFIER_REUSE`.
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-envers_quarkus.hibernate-envers.modified-column-naming-strategy]]`link:#quarkus-hibernate-envers_quarkus.hibernate-envers.modified-column-naming-strategy[quarkus.hibernate-envers.modified-column-naming-strategy]`

[.description]
--
Defines the naming strategy to be used for modified columns. Defaults to `org.hibernate.envers.boot.internal.LegacyModifiedColumnNamingStrategy`. Maps to `org.hibernate.envers.configuration.EnversSettings++#++MODIFIED_COLUMN_NAMING_STRATEGY`.
--|string 
|`org.hibernate.envers.boot.internal.LegacyModifiedColumnNamingStrategy`

|===