content/_generated-doc/2.13/config/quarkus-hibernate-envers.adoc

:summaryTableId: quarkus-hibernate-envers
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference.searchable, cols="80,.^10,.^10"]
|===

h|[[quarkus-hibernate-envers_configuration]]link:#quarkus-hibernate-envers_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-envers_quarkus.hibernate-envers.enabled]]`link:#quarkus-hibernate-envers_quarkus.hibernate-envers.enabled[quarkus.hibernate-envers.enabled]`

[.description]
--
Whether Hibernate Envers is enabled <strong>during the build</strong>.

If Hibernate Envers is disabled during the build, all processing related to Hibernate Envers will be skipped,
and the audit entities will not be added to the Hibernate ORM metamodel
nor to the database schema that Hibernate ORM generates,
but it will not be possible to use Hibernate Envers at runtime:
`quarkus.hibernate-envers.active` will default to `false` and setting it to `true` will lead to an error.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ENVERS_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ENVERS_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-envers_quarkus.hibernate-envers.active]]`link:#quarkus-hibernate-envers_quarkus.hibernate-envers.active[quarkus.hibernate-envers.active]`

[.description]
--
Whether Hibernate Envers should be active for this persistence unit at runtime.

If Hibernate Envers is not active, the audit entities will *still* be added to the Hibernate ORM metamodel
and to the database schema that Hibernate ORM generates:
you would need to disable Hibernate Envers at build time (i.e. set `quarkus.hibernate-envers.enabled` to `false`)
in order to avoid that.
However, when Hibernate Envers is not active, it will not process entity change events
nor create new versions of entities.
and accessing the AuditReader through AuditReaderFactory will not be possible.

Note that if Hibernate Envers is disabled (i.e. `quarkus.hibernate-envers.enabled` is set to `false`),
it won't be active for any persistence unit, and setting this property to `true` will fail.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ENVERS_ACTIVE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ENVERS_ACTIVE+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`'true' if Hibernate ORM is enabled; 'false' otherwise`


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-envers_quarkus.hibernate-envers.store-data-at-delete]]`link:#quarkus-hibernate-envers_quarkus.hibernate-envers.store-data-at-delete[quarkus.hibernate-envers.store-data-at-delete]`

[.description]
--
Enable store_data_at_delete feature. Maps to `org.hibernate.envers.configuration.EnversSettings++#++STORE_DATA_AT_DELETE`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ENVERS_STORE_DATA_AT_DELETE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ENVERS_STORE_DATA_AT_DELETE+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-envers_quarkus.hibernate-envers.audit-table-suffix]]`link:#quarkus-hibernate-envers_quarkus.hibernate-envers.audit-table-suffix[quarkus.hibernate-envers.audit-table-suffix]`

[.description]
--
Defines a suffix for historical data table. Defaults to `_AUD`. Maps to `org.hibernate.envers.configuration.EnversSettings++#++AUDIT_TABLE_SUFFIX`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ENVERS_AUDIT_TABLE_SUFFIX+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ENVERS_AUDIT_TABLE_SUFFIX+++`
endif::add-copy-button-to-env-var[]
--|string 
|`_AUD`


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-envers_quarkus.hibernate-envers.audit-table-prefix]]`link:#quarkus-hibernate-envers_quarkus.hibernate-envers.audit-table-prefix[quarkus.hibernate-envers.audit-table-prefix]`

[.description]
--
Defines a prefix for historical data table. Default is the empty string. Maps to `org.hibernate.envers.configuration.EnversSettings++#++AUDIT_TABLE_PREFIX`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ENVERS_AUDIT_TABLE_PREFIX+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ENVERS_AUDIT_TABLE_PREFIX+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-envers_quarkus.hibernate-envers.revision-field-name]]`link:#quarkus-hibernate-envers_quarkus.hibernate-envers.revision-field-name[quarkus.hibernate-envers.revision-field-name]`

[.description]
--
Revision field name. Defaults to `REV`. Maps to `org.hibernate.envers.configuration.EnversSettings++#++REVISION_FIELD_NAME`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ENVERS_REVISION_FIELD_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ENVERS_REVISION_FIELD_NAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|`REV`


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-envers_quarkus.hibernate-envers.revision-type-field-name]]`link:#quarkus-hibernate-envers_quarkus.hibernate-envers.revision-type-field-name[quarkus.hibernate-envers.revision-type-field-name]`

[.description]
--
Revision type field name. Defaults to `REVTYPE`. Maps to `org.hibernate.envers.configuration.EnversSettings++#++REVISION_TYPE_FIELD_NAME`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ENVERS_REVISION_TYPE_FIELD_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ENVERS_REVISION_TYPE_FIELD_NAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|`REVTYPE`


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-envers_quarkus.hibernate-envers.revision-on-collection-change]]`link:#quarkus-hibernate-envers_quarkus.hibernate-envers.revision-on-collection-change[quarkus.hibernate-envers.revision-on-collection-change]`

[.description]
--
Enable the revision_on_collection_change feature. Maps to `org.hibernate.envers.configuration.EnversSettings++#++REVISION_ON_COLLECTION_CHANGE`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ENVERS_REVISION_ON_COLLECTION_CHANGE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ENVERS_REVISION_ON_COLLECTION_CHANGE+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-envers_quarkus.hibernate-envers.do-not-audit-optimistic-locking-field]]`link:#quarkus-hibernate-envers_quarkus.hibernate-envers.do-not-audit-optimistic-locking-field[quarkus.hibernate-envers.do-not-audit-optimistic-locking-field]`

[.description]
--
Enable the do_not_audit_optimistic_locking_field feature. Maps to `org.hibernate.envers.configuration.EnversSettings++#++DO_NOT_AUDIT_OPTIMISTIC_LOCKING_FIELD`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ENVERS_DO_NOT_AUDIT_OPTIMISTIC_LOCKING_FIELD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ENVERS_DO_NOT_AUDIT_OPTIMISTIC_LOCKING_FIELD+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-envers_quarkus.hibernate-envers.default-schema]]`link:#quarkus-hibernate-envers_quarkus.hibernate-envers.default-schema[quarkus.hibernate-envers.default-schema]`

[.description]
--
Defines the default schema of where audit tables are to be created. Maps to `org.hibernate.envers.configuration.EnversSettings++#++DEFAULT_SCHEMA`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ENVERS_DEFAULT_SCHEMA+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ENVERS_DEFAULT_SCHEMA+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-envers_quarkus.hibernate-envers.default-catalog]]`link:#quarkus-hibernate-envers_quarkus.hibernate-envers.default-catalog[quarkus.hibernate-envers.default-catalog]`

[.description]
--
Defines the default catalog of where audit tables are to be created. Maps to `org.hibernate.envers.configuration.EnversSettings++#++DEFAULT_CATALOG`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ENVERS_DEFAULT_CATALOG+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ENVERS_DEFAULT_CATALOG+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-envers_quarkus.hibernate-envers.track-entities-changed-in-revision]]`link:#quarkus-hibernate-envers_quarkus.hibernate-envers.track-entities-changed-in-revision[quarkus.hibernate-envers.track-entities-changed-in-revision]`

[.description]
--
Enables the track_entities_changed_in_revision feature. Maps to `org.hibernate.envers.configuration.EnversSettings++#++TRACK_ENTITIES_CHANGED_IN_REVISION`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ENVERS_TRACK_ENTITIES_CHANGED_IN_REVISION+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ENVERS_TRACK_ENTITIES_CHANGED_IN_REVISION+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-envers_quarkus.hibernate-envers.use-revision-entity-with-native-id]]`link:#quarkus-hibernate-envers_quarkus.hibernate-envers.use-revision-entity-with-native-id[quarkus.hibernate-envers.use-revision-entity-with-native-id]`

[.description]
--
Enables the use_revision_entity_with_native_id feature. Maps to `org.hibernate.envers.configuration.EnversSettings++#++USE_REVISION_ENTITY_WITH_NATIVE_ID`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ENVERS_USE_REVISION_ENTITY_WITH_NATIVE_ID+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ENVERS_USE_REVISION_ENTITY_WITH_NATIVE_ID+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-envers_quarkus.hibernate-envers.global-with-modified-flag]]`link:#quarkus-hibernate-envers_quarkus.hibernate-envers.global-with-modified-flag[quarkus.hibernate-envers.global-with-modified-flag]`

[.description]
--
Enables the global_with_modified_flag feature. Maps to `org.hibernate.envers.configuration.EnversSettings++#++GLOBAL_WITH_MODIFIED_FLAG`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ENVERS_GLOBAL_WITH_MODIFIED_FLAG+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ENVERS_GLOBAL_WITH_MODIFIED_FLAG+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-envers_quarkus.hibernate-envers.modified-flag-suffix]]`link:#quarkus-hibernate-envers_quarkus.hibernate-envers.modified-flag-suffix[quarkus.hibernate-envers.modified-flag-suffix]`

[.description]
--
Defines the suffix to be used for modified flag columns. Defaults to `_MOD`. Maps to `org.hibernate.envers.configuration.EnversSettings++#++MODIFIED_FLAG_SUFFIX`

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ENVERS_MODIFIED_FLAG_SUFFIX+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ENVERS_MODIFIED_FLAG_SUFFIX+++`
endif::add-copy-button-to-env-var[]
--|string 
|`_MOD`


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-envers_quarkus.hibernate-envers.revision-listener]]`link:#quarkus-hibernate-envers_quarkus.hibernate-envers.revision-listener[quarkus.hibernate-envers.revision-listener]`

[.description]
--
Defines the fully qualified class name of a user defined revision listener. Maps to `org.hibernate.envers.configuration.EnversSettings++#++REVISION_LISTENER`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ENVERS_REVISION_LISTENER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ENVERS_REVISION_LISTENER+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-envers_quarkus.hibernate-envers.audit-strategy]]`link:#quarkus-hibernate-envers_quarkus.hibernate-envers.audit-strategy[quarkus.hibernate-envers.audit-strategy]`

[.description]
--
Defines the fully qualified class name of the audit strategy to be used. Maps to `org.hibernate.envers.configuration.EnversSettings++#++AUDIT_STRATEGY`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ENVERS_AUDIT_STRATEGY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ENVERS_AUDIT_STRATEGY+++`
endif::add-copy-button-to-env-var[]
--|string 
|`org.hibernate.envers.strategy.DefaultAuditStrategy`


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-envers_quarkus.hibernate-envers.original-id-prop-name]]`link:#quarkus-hibernate-envers_quarkus.hibernate-envers.original-id-prop-name[quarkus.hibernate-envers.original-id-prop-name]`

[.description]
--
Defines the property name for the audit entity's composite primary key. Defaults to `originalId`. Maps to `org.hibernate.envers.configuration.EnversSettings++#++ORIGINAL_ID_PROP_NAME`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ENVERS_ORIGINAL_ID_PROP_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ENVERS_ORIGINAL_ID_PROP_NAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|`originalId`


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-envers_quarkus.hibernate-envers.audit-strategy-validity-end-rev-field-name]]`link:#quarkus-hibernate-envers_quarkus.hibernate-envers.audit-strategy-validity-end-rev-field-name[quarkus.hibernate-envers.audit-strategy-validity-end-rev-field-name]`

[.description]
--
Defines the column name that holds the end revision number in audit entities. Defaults to `REVEND`. Maps to `org.hibernate.envers.configuration.EnversSettings++#++AUDIT_STRATEGY_VALIDITY_END_REV_FIELD_NAME`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ENVERS_AUDIT_STRATEGY_VALIDITY_END_REV_FIELD_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ENVERS_AUDIT_STRATEGY_VALIDITY_END_REV_FIELD_NAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|`REVEND`


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-envers_quarkus.hibernate-envers.audit-strategy-validity-store-revend-timestamp]]`link:#quarkus-hibernate-envers_quarkus.hibernate-envers.audit-strategy-validity-store-revend-timestamp[quarkus.hibernate-envers.audit-strategy-validity-store-revend-timestamp]`

[.description]
--
Enables the audit_strategy_validity_store_revend_timestamp feature. Maps to `org.hibernate.envers.configuration.EnversSettings++#++AUDIT_STRATEGY_VALIDITY_STORE_REVEND_TIMESTAMP`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ENVERS_AUDIT_STRATEGY_VALIDITY_STORE_REVEND_TIMESTAMP+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ENVERS_AUDIT_STRATEGY_VALIDITY_STORE_REVEND_TIMESTAMP+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-envers_quarkus.hibernate-envers.audit-strategy-validity-revend-timestamp-field-name]]`link:#quarkus-hibernate-envers_quarkus.hibernate-envers.audit-strategy-validity-revend-timestamp-field-name[quarkus.hibernate-envers.audit-strategy-validity-revend-timestamp-field-name]`

[.description]
--
Defines the column name of the revision end timestamp in the audit tables. Defaults to `REVEND_TSTMP`. Maps to `org.hibernate.envers.configuration.EnversSettings++#++AUDIT_STRATEGY_VALIDITY_REVEND_TIMESTAMP_FIELD_NAME`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ENVERS_AUDIT_STRATEGY_VALIDITY_REVEND_TIMESTAMP_FIELD_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ENVERS_AUDIT_STRATEGY_VALIDITY_REVEND_TIMESTAMP_FIELD_NAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|`REVEND_TSTMP`


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-envers_quarkus.hibernate-envers.embeddable-set-ordinal-field-name]]`link:#quarkus-hibernate-envers_quarkus.hibernate-envers.embeddable-set-ordinal-field-name[quarkus.hibernate-envers.embeddable-set-ordinal-field-name]`

[.description]
--
Defines the name of the column used for storing collection ordinal values for embeddable elements. Defaults to `SETORDINAL`. Maps to `org.hibernate.envers.configuration.EnversSettings++#++EMBEDDABLE_SET_ORDINAL_FIELD_NAME`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ENVERS_EMBEDDABLE_SET_ORDINAL_FIELD_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ENVERS_EMBEDDABLE_SET_ORDINAL_FIELD_NAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|`SETORDINAL`


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-envers_quarkus.hibernate-envers.allow-identifier-reuse]]`link:#quarkus-hibernate-envers_quarkus.hibernate-envers.allow-identifier-reuse[quarkus.hibernate-envers.allow-identifier-reuse]`

[.description]
--
Enables the allow_identifier_reuse feature. Maps to `org.hibernate.envers.configuration.EnversSettings++#++ALLOW_IDENTIFIER_REUSE`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ENVERS_ALLOW_IDENTIFIER_REUSE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ENVERS_ALLOW_IDENTIFIER_REUSE+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-envers_quarkus.hibernate-envers.modified-column-naming-strategy]]`link:#quarkus-hibernate-envers_quarkus.hibernate-envers.modified-column-naming-strategy[quarkus.hibernate-envers.modified-column-naming-strategy]`

[.description]
--
Defines the naming strategy to be used for modified columns. Defaults to `org.hibernate.envers.boot.internal.LegacyModifiedColumnNamingStrategy`. Maps to `org.hibernate.envers.configuration.EnversSettings++#++MODIFIED_COLUMN_NAMING_STRATEGY`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ENVERS_MODIFIED_COLUMN_NAMING_STRATEGY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ENVERS_MODIFIED_COLUMN_NAMING_STRATEGY+++`
endif::add-copy-button-to-env-var[]
--|string 
|`org.hibernate.envers.boot.internal.LegacyModifiedColumnNamingStrategy`


h|[[quarkus-hibernate-envers_quarkus.hibernate-envers.persistence-units-configuration-for-additional-named-persistence-units]]link:#quarkus-hibernate-envers_quarkus.hibernate-envers.persistence-units-configuration-for-additional-named-persistence-units[Configuration for additional named persistence units]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-envers_quarkus.hibernate-envers.-persistence-unit-name-.active]]`link:#quarkus-hibernate-envers_quarkus.hibernate-envers.-persistence-unit-name-.active[quarkus.hibernate-envers."persistence-unit-name".active]`

[.description]
--
Whether Hibernate Envers should be active for this persistence unit at runtime.

If Hibernate Envers is not active, the audit entities will *still* be added to the Hibernate ORM metamodel
and to the database schema that Hibernate ORM generates:
you would need to disable Hibernate Envers at build time (i.e. set `quarkus.hibernate-envers.enabled` to `false`)
in order to avoid that.
However, when Hibernate Envers is not active, it will not process entity change events
nor create new versions of entities.
and accessing the AuditReader through AuditReaderFactory will not be possible.

Note that if Hibernate Envers is disabled (i.e. `quarkus.hibernate-envers.enabled` is set to `false`),
it won't be active for any persistence unit, and setting this property to `true` will fail.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ENVERS__PERSISTENCE_UNIT_NAME__ACTIVE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ENVERS__PERSISTENCE_UNIT_NAME__ACTIVE+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`'true' if Hibernate ORM is enabled; 'false' otherwise`

|===